; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_read-rtl.c_print_rtx_ptr_loc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_read-rtl.c_print_rtx_ptr_loc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ptr_loc = type { i32, i8* }

@.str = private unnamed_addr constant [15 x i8] c"#line %d \22%s\22\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_rtx_ptr_loc(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ptr_loc*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call %struct.ptr_loc* @get_rtx_ptr_loc(i8* %4)
  store %struct.ptr_loc* %5, %struct.ptr_loc** %3, align 8
  %6 = load %struct.ptr_loc*, %struct.ptr_loc** %3, align 8
  %7 = icmp ne %struct.ptr_loc* %6, null
  br i1 %7, label %8, label %16

8:                                                ; preds = %1
  %9 = load %struct.ptr_loc*, %struct.ptr_loc** %3, align 8
  %10 = getelementptr inbounds %struct.ptr_loc, %struct.ptr_loc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = load %struct.ptr_loc*, %struct.ptr_loc** %3, align 8
  %13 = getelementptr inbounds %struct.ptr_loc, %struct.ptr_loc* %12, i32 0, i32 1
  %14 = load i8*, i8** %13, align 8
  %15 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %11, i8* %14)
  br label %16

16:                                               ; preds = %8, %1
  ret void
}

declare dso_local %struct.ptr_loc* @get_rtx_ptr_loc(i8*) #1

declare dso_local i32 @printf(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
